--- a/blog-vue/shoka-blog/src/assets/styles/common.scss
+++ b/blog-vue/shoka-blog/src/assets/styles/common.scss
@@ -55,7 +55,7 @@
 	margin: 1.5rem auto;
 	padding: 1.75rem 2.25rem;
 	border-radius: 0.75rem;
-	box-shadow: 0 0 1rem var(--box-bg-shadow);
+	box-shadow: var(--card-shadow);
 	animation: slideUpIn 1s;
 }
 
@@ -127,7 +127,7 @@
 .side-card {
 	padding: 1rem;
 	border-radius: 0.5rem;
-	box-shadow: 0 0 1rem var(--box-bg-shadow);
+	box-shadow: var(--card-shadow);
 	transition: all 0.2s ease-in-out 0s;
 
 	&:not(:first-child) {
