--- a/blog-vue/shoka-blog/src/assets/styles/common.scss
+++ b/blog-vue/shoka-blog/src/assets/styles/common.scss
@@ -21,8 +21,8 @@
 		left: 0;
 		width: 100%;
 		height: 100%;
-		background-color: rgba(0, 0, 0, .2);
-		transition: all .2s ease-in-out 0s;
+		background-color: rgba(0, 0, 0, 0.2);
+		transition: all .9s ease-in-out 0s;
 	}
 }
 
@@ -56,7 +56,7 @@
 	padding: 1.75rem 2.25rem;
 	border-radius: 0.75rem;
 	box-shadow: var(--card-shadow);
-	animation: slideUpIn 1s;
+	animation: slideUpIn 2s;
 }
 
 @media (min-width: 1200px) {
@@ -82,7 +82,7 @@
 	justify-content: center;
 	width: calc(100% - 0.625rem);
 	margin: 0 auto;
-	padding-bottom: 1.75rem;
+	padding: 1.75rem 0;
 	animation: slideUpIn 1s;
 }
 
