--- a/blog-vue/shoka-blog/src/assets/styles/theme-shoka.scss
+++ b/blog-vue/shoka-blog/src/assets/styles/theme-shoka.scss
@@ -247,6 +247,10 @@
 [theme="gradient"] .bg .vuepress-markdown-body tr:nth-child(2n) {
 	background-color: var(--table-stripe-bg) !important;
 }
+[theme="gradient"] .bg:has(.article-container) .side-card {
+	background-color: rgba(255, 255, 255, 0.2);
+}
+
 
 /* gradient 主题下滚动条 */
 [theme="gradient"] ::-webkit-scrollbar-thumb {
