--- a/blog-vue/shoka-blog/src/assets/styles/theme-shoka.scss
+++ b/blog-vue/shoka-blog/src/assets/styles/theme-shoka.scss
@@ -232,7 +232,7 @@
 
 /* gradient：页面 .bg 动态渐变（background + background-size + animation 联动） */
 [theme="gradient"] .bg {
-	background: linear-gradient(-45deg, #dd9a83, #d65367, #4aa6da, #23d5ab);
+	background: linear-gradient(-45deg, #e28868, #dd435b, #309edb, #18d4a8);
 	background-size: 300% 300%;
 	animation: gradientBG 10s ease infinite;
 }
